cmake_minimum_required(VERSION 3.15)
project(Lab_9__Inheretence___Black_Jack_Game_)

set(CMAKE_CXX_STANDARD 20)

add_executable(Lab_9__Inheretence___Black_Jack_Game_ player.cpp player.h dealer.cpp dealer.h BlackJackHand.cpp BlackJackHand.h PlayingCard.cpp PlayingCard.h PlayingCardDeck.cpp PlayingCardDeck.h BlackJackGame.cpp)